Bug 363128 - The Animation cache updating causes playback to pauze
Summary: The Animation cache updating causes playback to pauze
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Animation (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL: https://www.youtube.com/watch?v=Nnxbh...
Keywords:
Depends on:
Blocks:
 
Reported: 2016-05-16 11:30 UTC by wolthera
Modified: 2016-05-16 18:36 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description wolthera 2016-05-16 11:30:57 UTC
When having an animation painted, and you start playing it, the animation will cache. This is normal. However, while caching it'll stop playback, meaning that you have to press play multiple times.

As a sidenote, the 'this frame is cached' indicator is far too difficult to see on both light and dark themes. I bet most people don't know about it's existence.

Reproducible: Always




The link I gave above has this problem at about 9:30 in.
Comment 1 Dmitry Kazakov 2016-05-16 18:06:33 UTC
Git commit 0877aecb3b251b38c361a67a8bcce81d293dd76f by Dmitry Kazakov.
Committed on 16/05/2016 at 18:06.
Pushed by dkazakov into branch 'master'.

Make the cached-frame indicator more contrast

M  +3    -1    plugins/dockers/animation/timeline_color_scheme.cpp

http://commits.kde.org/krita/0877aecb3b251b38c361a67a8bcce81d293dd76f
Comment 2 Dmitry Kazakov 2016-05-16 18:36:18 UTC
Git commit 1cb60a6987d83b4e1524d997268cf987f359effc by Dmitry Kazakov.
Committed on 16/05/2016 at 18:35.
Pushed by dkazakov into branch 'master'.

Fix animation not stop on the first absent frame
Fixes T2511

M  +2    -1    libs/ui/canvas/kis_animation_player.cpp

http://commits.kde.org/krita/1cb60a6987d83b4e1524d997268cf987f359effc