Fix animation not stop on the first absent frame

BUG:363128
Fixes T2511